--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="images/Keshav.png" width="150" height="150" alt="Keshav Profile picture"></td>
+      <td><img src="images/keshav.png" width="150" height="150" alt="Keshav Profile picture"></td>
       <td>  <h1>Keshav</h1>
         <p>
           <em>Persuing Undergraduation From <a href="https://www.thapar.edu/"><strong>TIET</strong></a>.</em>
