--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </tr>
   </table>
     <hr />
-<a href="Hobbies.html">My Hobbies</a>
+<a href="hobbies.html">My Hobbies</a>
 <a href="contactme.html">Contact Me</a>
 
 
